--- a/hair-calc.css
+++ b/hair-calc.css
@@ -9,18 +9,28 @@
     text-align: center;
     display: flex;
     justify-content: center;
-    
-    
-    
+
 }
 .container{
   
     max-width: 1200px;
 }
 
+.header{
+   position: relative;
+}
+
+.back{
+    position: absolute;
+    bottom: 0px;
+    left: 20px;
+}
+
 .logo{
     margin: 30px;
 }
+
+
 
 .calc-container{
     background-color: #2B79C2;
@@ -95,52 +105,72 @@
     display: flex;
     justify-content: center;
     position: relative;
-    
-    left: 75px;
+    width: 100%;
+    height: 80%;
     
 }
 
 .first-page{
     text-align: center;
     position: absolute;
-    right: 230px;
+    width: 100%;
+    transition: 1s;
+   
+    
 }
 
 .second-page{
     position: absolute;
-    right: -300px;
-    
+    margin-top: 40px;
+    margin-left: 1000px;
+    transition: 1s;
+}
+.man-woman{
+    display: flex;
+    margin: 40px 0;
+}
+.man-woman img{
+    margin: 10px;
+    position: relative;
+    bottom: 0;
+}
+
+.man-woman img:hover{
+   bottom: 30px;
+   transition: 0.5s;
 }
 
 .third-page{
     position: absolute;
-    right: -600px;
-    width: 400px;
+    margin-top: 50px;
+    margin-left: 1000px;
+    
+    transition: 1s;
 }
 
 .third-page .images{
     display: flex;
-    border: 1px solid red;
     justify-content: center;
     gap: 20px;
     
 }
 
+.third-page h2{
+    margin-bottom: 20px;
+}
+
 .current-page{
     transition: 1s;
-    right: 210px;
+    margin-left: 0;
+    
 }
 
 .move-page{
-    right: 750px;
+    margin-right: 1000px;
     transition: 1s;
 }
 
-
-.man-woman{
-    display: flex;
-    margin: 20px 0;
-}
-.man-woman img{
-    margin: 20px;
+.selected{
+    border: 2px solid white;
+    border-radius: 50%;
 }
