--- a/hair-calc.css
+++ b/hair-calc.css
@@ -38,7 +38,7 @@
     height: 500px;
     border-radius: 25px;
     padding-top: 1px;
-    overflow: visible;
+    overflow: hidden;
     
     
     
@@ -174,5 +174,26 @@
     border: 5px solid white;
     border-radius: 50%;
     transition: 0;
+}
+
+.woman-page{
+    width: 100%;
+    
+    
+}
+
+.third-page img{
+    
+    position: relative;
+   
+    bottom: 0;
+    transition: 0.3s;
+
+}
+
+
+.third-page img:hover{
+    bottom: 20px;
+    transition: 0.3s;
 }
 
